# cmmc

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  commits.json  default.nix  index.html  summary.html  summary.json  summary_019d6e5.json  summary_15c54cc.json  summary_1a70f2f.json  summary_31ee101.json  summary_3628aff.json  summary_49e29bb.json  summary_5491a56.json  summary_682c6b6.json  summary_93ba47b.json  summary_97cc72f.json  summary_980aab1.json  summary_aab1a0a.json  summary_aeac1e6.json  summary_b7d36f9.json  summary_bdc17f3.json  summary_c9c373a.json  summary_e064c2c.json  summary_f2fd217.json  summary_fff5d50.json  test_list.json
.github/workflows/: linux.yml  release.yml
arm/: summary.html  summary.json  testcases.html
arm/data/: 00_bitset1_perf.json  00_bitset2_perf.json  00_bitset3_perf.json  01_mm1_perf.json  01_mm2_perf.json  01_mm3_perf.json  02_mv1_perf.json  02_mv2_perf.json  02_mv3_perf.json  03_sort1_perf.json  03_sort2_perf.json  03_sort3_perf.json  04_spmv1_perf.json  04_spmv2_perf.json  04_spmv3_perf.json  brainfuck-bootstrap_perf.json  brainfuck-mandelbrot-nerf_perf.json  brainfuck-pi-nerf_perf.json  conv0_perf.json  conv1_perf.json  conv2_perf.json  crypto-1_perf.json  crypto-2_perf.json  crypto-3_perf.json  dead-code-elimination-1_perf.json  dead-code-elimination-2_perf.json  dead-code-elimination-3_perf.json  derich1_perf.json  derich2_perf.json  derich3_perf.json  fft0_perf.json  fft1_perf.json  fft2_perf.json  floyd-0_perf.json  floyd-1_perf.json  floyd-2_perf.json  gameoflife-gosper_perf.json  gameoflife-oscillator_perf.json  gameoflife-p61glidergun_perf.json  hoist-1_perf.json  (+42 more)
arm/summaries/: summary_019d6e5.json  summary_06171ba.json  summary_091e2e9.json  summary_0c25b30.json  summary_0e074d4.json  summary_12b7535.json  summary_13043fd.json  summary_13e4309.json  summary_15c54cc.json  summary_1a14df9.json  summary_1a70f2f.json  summary_1c28adc.json  summary_1c8acc1.json  summary_2a366fc.json  summary_2a4c122.json  summary_2dec3aa.json  summary_31ee101.json  summary_3237d89.json  summary_330d08b.json  summary_358d96c.json  summary_359ba93.json  summary_3628aff.json  summary_3871ff9.json  summary_3975bb1.json  summary_445040d.json  summary_44b7164.json  summary_454f0dd.json  summary_46a5b0d.json  summary_48fc697.json  summary_49e29bb.json  summary_4b106fc.json  summary_51257a1.json  summary_5491a56.json  summary_56f1f4a.json  summary_585045d.json  summary_5ec5812.json  summary_6275354.json  summary_62ce6e9.json  summary_648819e.json  summary_682c6b6.json  (+60 more)
cmmc/: Config.hpp
cmmc/Analysis/: AliasAnalysis.cpp  AliasAnalysis.hpp  AnalysisPass.cpp  AnalysisPass.hpp  BlockArgumentAnalysis.cpp  BlockArgumentAnalysis.hpp  BlockTripCountEstimation.cpp  BlockTripCountEstimation.hpp  CFGAnalysis.cpp  CFGAnalysis.hpp  CallGraphSCC.cpp  CallGraphSCC.hpp  DominateAnalysis.cpp  DominateAnalysis.hpp  FunctionAnalysis.cpp  FunctionAnalysis.hpp  HotspotAnalysis.hpp  IntegerRange.cpp  IntegerRange.hpp  IntegerRangeAnalysis.cpp  IntegerRangeAnalysis.hpp  LoopAnalysis.cpp  LoopAnalysis.hpp  PhiAnalysis.cpp  PhiAnalysis.hpp  PointerAddressSpaceAnalysis.cpp  PointerAddressSpaceAnalysis.hpp  PointerAlignmentAnalysis.cpp  PointerAlignmentAnalysis.hpp  PointerBaseAnalysis.cpp  PointerBaseAnalysis.hpp  RangeAnalysis.hpp  SCEVAnalysis.cpp  SCEVAnalysis.hpp  SCEVExpr.hpp  SimpleValueAnalysis.cpp  SimpleValueAnalysis.hpp  StackAddressLeakAnalysis.cpp  StackAddressLeakAnalysis.hpp  StackLifetimeAnalysis.cpp  (+1 more)
cmmc/CodeGen/: BlockLayoutOpt.cpp  CodeGenPrepare.cpp  CodeGenUtils.cpp  CodeGenUtils.hpp  DataLayout.hpp  FastRegisterAllocator.cpp  FrameInfo.cpp  FrameInfo.hpp  GMIR.cpp  GMIR.hpp  GMIRCFGAnalysis.cpp  GMIRCFGAnalysis.hpp  GraphColoringRegisterAllocator.cpp  GreedyRegisterAllocator.cpp  HFSort.cpp  ICF.cpp  ISelInfo.cpp  ISelInfo.hpp  InstInfo.cpp  InstInfo.hpp  InstSelection.hpp  LiveInterval.cpp  LiveInterval.hpp  LiveRangeAnalysis.cpp  Lowering.cpp  Lowering.hpp  LoweringPass.hpp  MIR.cpp  MIR.hpp  MIRCFGAnalysis.cpp  MIRCFGAnalysis.hpp  MachineInst.hpp  MachineModule.cpp  MachineModule.hpp  MultiplyByConstant.cpp  MultiplyByConstant.hpp  Peephole.cpp  Register.hpp  RegisterAllocator.cpp  RegisterAllocator.hpp  (+16 more)
cmmc/Conversion/: LLVM.cpp  LLVM.hpp  TAC.cpp  TAC.hpp  TACImpl.cpp  TACImpl.hpp
cmmc/Driver/: CMMCDriver.c  CMMCDriver.cpp
cmmc/ExecutionEngine/: Interpreter.cpp  Interpreter.hpp  LLVMOrcJIT.cpp
cmmc/Frontend/: AST.h  AST.hpp  Driver.cpp  Driver.hpp  DriverImpl.cpp  DriverImpl.hpp  EmitIR.cpp  EmitIR.hpp  FrontendSupport.hpp  Lex.l  Location.hpp  Parser.c  Parser.yy  ParserSpl.yy  ParserSysY.yy  Scanner.ll  ScannerSpl.ll  ScannerSysY.ll  SourceLocation.cpp  SourceLocation.h  SourceLocation.hpp  SplSupport.cpp  Syntax.y
cmmc/IR/: Attachments.hpp  Attribute.hpp  BasicBlock.hpp  (+29 more)
cmmc/Support/mimalloc/: CMakeLists.txt
data/: 00_bitset1_perf.json  00_bitset2_perf.json  00_bitset3_perf.json  01_mm1_perf.json  01_mm2_perf.json  01_mm3_perf.json  02_mv1_perf.json  02_mv2_perf.json  02_mv3_perf.json  03_sort1_perf.json  03_sort2_perf.json  03_sort3_perf.json  04_spmv1_perf.json  04_spmv2_perf.json  04_spmv3_perf.json  brainfuck-bootstrap_perf.json  brainfuck-mandelbrot-nerf_perf.json  brainfuck-pi-nerf_perf.json  conv0_perf.json  conv1_perf.json  conv2_perf.json  crypto-1_perf.json  crypto-2_perf.json  crypto-3_perf.json  dead-code-elimination-1_perf.json  dead-code-elimination-2_perf.json  dead-code-elimination-3_perf.json  derich1_perf.json  derich2_perf.json  derich3_perf.json  fft0_perf.json  fft1_perf.json  fft2_perf.json  floyd-0_perf.json  floyd-1_perf.json  floyd-2_perf.json  gameoflife-gosper_perf.json  gameoflife-oscillator_perf.json  gameoflife-p61glidergun_perf.json  hoist-1_perf.json  (+42 more)
educg/: CMMCDriver.cpp  Makefile  Target_arm.hpp  Target_riscv.hpp  cmmc_file_filter.py  cmmc_header_fix.py  sync_repo.sh
riscv/: summary.html  summary.json  testcases.html
tests/: minimal.spl  test_driver.py
tune/: runall.py  tune.py
unittests/: CMakeLists.txt  IntegerRangeEval.cpp
(+5040 files in other folders)
